Logo and Nav Bar header added

--- a/index.html
+++ b/index.html
@@ -397,6 +397,21 @@
     </style>
 </head>
 <body>
+    <!-- logo and Nav bar Header -->
+    <header>
+        <div class="container">
+            <div class="logo">Sarah Chen</div>
+            <nav>
+                <ul>
+                    <li><a href="#portfolio">Portfolio</a></li>
+                    <li><a href="#about">About</a></li>
+                    <li><a href="#contact">Contact</a></li>
+                </ul>
+            </nav>
+        </div>
+    </header>
+
     
+
 </body>
 </html>
