Hero Section Added

--- a/index.html
+++ b/index.html
@@ -411,7 +411,14 @@
         </div>
     </header>
 
-    
+    <!-- hero Section -->
+     <section class="hero">
+        <div class="container">
+            <h1>Capturing Life's Beautiful Moments</h1>
+            <p>Wedding, Portrait & Landscape Photography</p>
+            <a href="#portfolio" class="btn">View Portfolio</a>
+        </div>
+    </section>
 
 </body>
 </html>
