Portfolio Section Added

--- a/index.html
+++ b/index.html
@@ -420,5 +420,86 @@
         </div>
     </section>
 
+    <!-- portfolio Section -->
+     <section id="portfolio" class="portfolio">
+        <div class="container">
+            <h2 class="section-title">My Work</h2>
+            <p class="section-subtitle">A collection of my favorite moments</p>
+
+            <div class="filter-buttons">
+                <button class="filter-btn active" data-category="all">All</button>
+                <button class="filter-btn" data-category="weddings">Weddings</button>
+                <button class="filter-btn" data-category="portraits">Portraits</button>
+                <button class="filter-btn" data-category="landscapes">Landscapes</button>
+            </div>
+
+            <div class="photos-grid">
+                <div class="photo-card" data-category="weddings" data-title="Golden Hour Wedding" data-icon="💍">
+                    <div class="photo-placeholder">💍</div>
+                    <div class="photo-overlay">
+                        <p class="photo-title">Golden Hour Wedding</p>
+                    </div>
+                </div>
+
+                <div class="photo-card" data-category="portraits" data-title="Natural Light Portrait" data-icon="👤">
+                    <div class="photo-placeholder">👤</div>
+                    <div class="photo-overlay">
+                        <p class="photo-title">Natural Light Portrait</p>
+                    </div>
+                </div>
+
+                <div class="photo-card" data-category="landscapes" data-title="Mountain Vista" data-icon="🏔️">
+                    <div class="photo-placeholder">🏔️</div>
+                    <div class="photo-overlay">
+                        <p class="photo-title">Mountain Vista</p>
+                    </div>
+                </div>
+
+                <div class="photo-card" data-category="weddings" data-title="Ceremony Moments" data-icon="💐">
+                    <div class="photo-placeholder">💐</div>
+                    <div class="photo-overlay">
+                        <p class="photo-title">Ceremony Moments</p>
+                    </div>
+                </div>
+
+                <div class="photo-card" data-category="portraits" data-title="Family Portrait" data-icon="👨‍👩‍👧‍👦">
+                    <div class="photo-placeholder">👨‍👩‍👧‍👦</div>
+                    <div class="photo-overlay">
+                        <p class="photo-title">Family Portrait</p>
+                    </div>
+                </div>
+
+                <div class="photo-card" data-category="landscapes" data-title="Coastal Sunset" data-icon="🌅">
+                    <div class="photo-placeholder">🌅</div>
+                    <div class="photo-overlay">
+                        <p class="photo-title">Coastal Sunset</p>
+                    </div>
+                </div>
+
+                <div class="photo-card" data-category="weddings" data-title="Reception Joy" data-icon="🎉">
+                    <div class="photo-placeholder">🎉</div>
+                    <div class="photo-overlay">
+                        <p class="photo-title">Reception Joy</p>
+                    </div>
+                </div>
+
+                <div class="photo-card" data-category="portraits" data-title="Business Headshot" data-icon="👔">
+                    <div class="photo-placeholder">👔</div>
+                    <div class="photo-overlay">
+                        <p class="photo-title">Business Headshot</p>
+                    </div>
+                </div>
+
+                <div class="photo-card" data-category="landscapes" data-title="Forest Path" data-icon="🌲">
+                    <div class="photo-placeholder">🌲</div>
+                    <div class="photo-overlay">
+                        <p class="photo-title">Forest Path</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+
 </body>
 </html>
