About me section added

--- a/index.html
+++ b/index.html
@@ -500,6 +500,20 @@
         </div>
     </section>
 
+    <!-- about Section -->
+     <section id="about" class="about">
+        <div class="container">
+            <div class="about-content">
+                <div class="about-image">📷</div>
+                <div class="about-text">
+                    <h2>About Me</h2>
+                    <p>Hi! I'm Sarah, a passionate photographer based in the Pacific Northwest. For over 10 years, I've been capturing the beauty of life's most precious moments.</p>
+                    <p>My style is natural, candid, and authentic. I believe the best photos are the ones that tell a story and evoke emotion.</p>
+                    <p>Whether it's your wedding day, a family portrait, or the stunning landscapes around us, I'd be honored to help you preserve your memories.</p>
+                </div>
+            </div>
+        </div>
+    </section>
 
 </body>
 </html>
