Contact, Footer and Lightbox section added

--- a/index.html
+++ b/index.html
@@ -515,5 +515,60 @@
         </div>
     </section>
 
+    <!-- contact Section -->
+     <section id="contact" class="contact">
+        <div class="container">
+            <h2 class="section-title">Let's Work Together</h2>
+            <p class="section-subtitle">I'd love to hear about your project</p>
+
+            <div class="contact-content">
+                <p class="contact-intro">Ready to book a session or have questions? Get in touch!</p>
+                
+                <div class="contact-info">
+                    <div class="contact-item">
+                        <span class="contact-icon">📧</span>
+                        <span>sarah@sarahchen.com</span>
+                    </div>
+                    <div class="contact-item">
+                        <span class="contact-icon">📞</span>
+                        <span>(555) 987-6543</span>
+                    </div>
+                    <div class="contact-item">
+                        <span class="contact-icon">📍</span>
+                        <span>Seattle, WA</span>
+                    </div>
+                </div>
+
+                <select id="eventType">
+                    <option>Wedding</option>
+                    <option>Portrait Session</option>
+                    <option>Landscape</option>
+                    <option>Other</option>
+                </select>
+
+                <button class="btn btn-primary" id="contactBtn">Send Message</button>
+            </div>
+        </div>
+    </section>
+
+    <!-- footer section  -->
+      <footer>
+        <div class="container">
+            <p>&copy; 2025 Sarah Chen Photography. All rights reserved.</p>
+            <p class="footer-credit">Website by Jake Chalmers</p>
+        </div>
+    </footer>
+
+    <!-- light box -->
+    <div class="lightbox" id="lightbox">
+        <div class="lightbox-content">
+            <button class="lightbox-close" id="closeLightbox">×</button>
+            <div class="lightbox-image" id="lightboxImage"></div>
+            <p class="lightbox-title" id="lightboxTitle"></p>
+        </div>
+    </div>
+
+
+
 </body>
 </html>
